# nodeforge

./: .dockerignore  .gitignore  Dockerfile  FR-configurable-state-dir.md  FR-env-var-spec-references.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  lint.yml  pypi.yml  release.yml
_env/.secrets/: test_id_ed25519  test_id_ed25519.pub
examples/: app-container.yaml  bootstrap.yaml  postgres.yaml
examples/backup-job/: README.md  backup-job.yaml
examples/bootstrap-env-vars/: README.md  bootstrap-env-vars.yaml
examples/bootstrap-password-login/: README.md  bootstrap-password-login.yaml
examples/bootstrap-wireguard-restricted/: README.md  bootstrap-wireguard-restricted.yaml
examples/compose-project/: README.md  compose-project.yaml  docker-compose.yml
examples/compose-project/templates/: app.conf.j2  nginx.conf.j2
examples/doctor/: README.md
examples/file-template/: README.md  file-template.yaml
examples/file-template/templates/: nginx-site.conf.j2
examples/full-stack/: README.md  full-stack.yaml
examples/http-check/: README.md  http-check.yaml
examples/multi-container/: README.md  multi-container.yaml
examples/multi-doc/: README.md  bootstrap-and-service.yaml
examples/nginx-reverse-proxy/: README.md  nginx-reverse-proxy.yaml
examples/policy/: README.md  policy.yaml
examples/postgres-ensure/: README.md  postgres-ensure.yaml
examples/postgres-minimal/: README.md  postgres-minimal.yaml
examples/stack/: README.md  stack.yaml
examples/systemd-timer/: README.md  systemd-timer.yaml
examples/systemd-unit/: README.md  systemd-unit.yaml
examples/ubuntu/01-admin-user/: 01-admin-user.goss.yaml  01-admin-user.yaml  README.md
examples/ubuntu/02-ssh-key-no-password/: 02-ssh-key-no-password.goss.yaml  02-ssh-key-no-password.yaml  README.md
examples/ubuntu/03-firewall-ssh22/: 03-firewall-ssh22.goss.yaml  03-firewall-ssh22.yaml  README.md
examples/ubuntu/04-firewall-ssh2222/: 04-firewall-ssh2222.goss.yaml  04-firewall-ssh2222.yaml  README.md
examples/ubuntu/05-wireguard/: 05-wireguard.goss.yaml  05-wireguard.yaml  README.md
examples/ubuntu/05b-wireguard-auto-key/: 05b-wireguard-auto-key.yaml  README.md
examples/wireguard-tunnel-lifecycle/: README.md  wireguard-tunnel-lifecycle.yaml
nodeforge/: cli.py  updater.py
nodeforge/addons/: README.md  __init__.py
nodeforge/addons/goss/: generator.py  renderer.py  shipper.py
nodeforge/agent/: README.md  __init__.py  cli.py  executor.py  installer.py  lock.py  paths.py  state.py
nodeforge/checks/: README.md  compose.py  container.py  http.py  nginx.py  ports.py  postgres.py  ssh.py  wireguard.py
nodeforge/compiler/: README.md  normalizer.py  parser.py  planner.py
nodeforge/goss/: __init__.py
nodeforge/local/: README.md  inventory.py  inventory_db.py  keys.py  sqlcipher.py  ssh_config.py  wireguard_store.py
nodeforge/local/ddl/: bootstrap_tables.py  versionize_system.py
nodeforge/logs/: README.md  reader.py  writer.py
nodeforge/plan/: README.md  models.py  render_diff.py  render_markdown.py  render_text.py
nodeforge/registry/: README.md  __init__.py  _builtins.py  executors.py  hooks.py  local_paths.py  normalizers.py  planners.py  resolvers.py  specs.py  validators.py
nodeforge/runtime/: README.md  agent_transport.py  executor.py  ssh.py
nodeforge/runtime/steps/: bootstrap.py  container.py  docker.py  nginx.py  postgres.py  wireguard.py
nodeforge/specs/: README.md  bootstrap_schema.py  compose_project_schema.py  file_template_schema.py  loader.py  service_schema.py  validators.py
nodeforge/utils/: README.md  files.py  os_detect.py  templates.py
scripts/: agent_entrypoint.py  build_agent_binary.py  build_binary.ps1  build_binary.py  entrypoint.py
tests/: conftest.py  test_backup_job.py  test_compose_project.py  test_file_template.py  test_http_check.py  test_nginx.py  test_postgres_ensure.py  test_rotate_secret.py  test_systemd_timer.py  test_systemd_unit.py  test_templates.py
tests/test_agent/: test_executor.py  test_lock.py  test_state.py
tests/test_cli/: test_plan_cmd.py  test_validate_cmd.py
tests/test_compiler/: test_normalizer.py  test_planner.py  test_planner_wg_gate.py
tests/test_local/: test_inventory_db.py  test_remove.py  test_sqlcipher.py  test_ssh_config.py  test_ssh_config_tunnel.py  test_tunnel.py  test_wireguard_store.py
tests/test_plan/: test_render_markdown.py  test_render_text.py
tests/test_registry/: test_local_paths.py  test_resolvers.py
tests/test_runtime/: test_executor.py  test_steps_bootstrap.py
tests/test_smoke/: test_examples.py
tests/test_specs/: test_bootstrap_schema.py  test_env_overlay.py  test_env_vars.py  test_loader.py  test_multi_doc.py  test_policy.py  test_stack.py  test_validators.py
