[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nodeforge"
version = "0.1.0"
description = "Securely bootstrap Linux servers with auditable plans, generated ops docs, and encrypted local inventory"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "fabric>=3.2",
    "jinja2>=3.1",
    "rich>=13.0",
    "requests>=2.31",
    "pynacl>=1.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.12",
    "pyfakefs>=5.3",
    "ruff>=0.4",
    "black>=24.0",
    "build>=1.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "SIM108", # use ternary operator (readability preference)
    "B008",   # function call in argument defaults (standard typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"nodeforge/local/ddl/versionize_system.py" = ["E101", "W191"]  # embedded SQL uses tabs

[tool.ruff.lint.isort]
known-first-party = ["nodeforge"]

[tool.black]
target-version = ["py311"]
line-length = 100

[project.scripts]
nodeforge = "nodeforge.cli:app"

# Addon discovery group. External packages register here to extend nodeforge
# with new spec kinds, step handlers, and lifecycle hooks without modifying core.
# Example (in an addon's pyproject.toml):
#   [project.entry-points."nodeforge.addons"]
#   my_addon = "my_addon:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodeforge*"]
