[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ── Root workspace config ─────────────────────────────────────────────────────
# This project is split into three packages under packages/:
#   - packages/core/    → nodeforge-core   (shared models, specs, registry)
#   - packages/client/  → nodeforge        (CLI, compiler, runtime, local state)
#   - packages/agent/   → nodeforge-agent  (server-side executor, state, locking)
#
# Install all three for development:
#   pip install -e packages/core -e packages/client -e packages/agent -e ".[dev]"

[project]
name = "nodeforge-workspace"
version = "0.6.3"
description = "Workspace root for nodeforge monorepo"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.12",
    "pyfakefs>=5.3",
    "ruff>=0.4",
    "black>=24.0",
    "build>=1.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "SIM108", # use ternary operator (readability preference)
    "B008",   # function call in argument defaults (standard typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"packages/client/nodeforge/local/ddl/versionize_system.py" = ["E101", "W191"]  # embedded SQL uses tabs

[tool.ruff.lint.isort]
known-first-party = ["nodeforge", "nodeforge_core", "nodeforge_agent"]

[tool.black]
target-version = ["py311"]
line-length = 100
